--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
     <!-- /Section Header -->
 
     <!-- main -->
-    <main>
+    <main class="container-main">
+        <section class="row clearfix">
+            <div class="col60 float">
+                <img src="img/item1.svg" alt="">
+            </div>
+            <div class="col40 float">
+                <h1>Un Luogo ad invito con tutto lo spazio necessario per parlare</h1>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
 
     </main>
     <!-- /main -->
