--- a/index.html
+++ b/index.html
@@ -59,11 +59,31 @@
     <main class="container-main">
         <section class="row clearfix">
             <div class="col60 float">
-                <img src="img/item1.svg" alt="">
+                <img class="dim-img" src="img/item1.svg" alt="">
             </div>
             <div class="col40 float">
-                <h1>Un Luogo ad invito con tutto lo spazio necessario per parlare</h1>
+                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
                 <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
+        <section class="row gray clearfix">
+            <div class="col40 float">
+                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+                parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+            <div class="col60 float">
+                <img class="dim-img" src="img/item3.svg" alt="">
+            </div>
+        </section>
+        <section class="row clearfix">
+            <div class="col60 float">
+                <img class="dim-img" src="img/item1.svg" alt="">
+            </div>
+            <div class="col40 float">
+                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+                    parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
 
