--- a/index.html
+++ b/index.html
@@ -56,35 +56,43 @@
     <!-- /Section Header -->
 
     <!-- main -->
-    <section class="row clearfix">
-        <div class="col60 float">
-            <img class="dim-img" src="img/item1.svg" alt="">
+   <main>
+        <section class="row clearfix">
+            <div class="col60 float">
+                <img class="dim-img" src="img/item1.svg" alt="">
+            </div>
+            <div class="col40 float">
+                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+                    parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
+        
+        <div class="gray">
+            <section class="row clearfix">
+                <div class="col40 float">
+                    <h2 class="font-size">Dove trovarsi &eacute; facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
+                        l&igrave;; e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="col60 float">
+                    <img class="dim-img" src="img/item2.svg" alt="">
+                </div>
+            </section>
         </div>
-        <div class="col40 float">
-            <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
-            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
-        </div>
-    </section>
-    <section class="row gray clearfix">
-        <div class="col40 float">
-            <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
-            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-            parlare della tua giornata senza intasare una chat di gruppo.</p>
-        </div>
-        <div class="col60 float">
-            <img class="dim-img" src="img/item2.svg" alt="">
-        </div>
-    </section>
-    <section class="row clearfix">
-        <div class="col60 float">
-            <img class="dim-img" src="img/item3.svg" alt="">
-        </div>
-        <div class="col40 float">
-            <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
-            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-            parlare della tua giornata senza intasare una chat di gruppo.</p>
-        </div>
-    </section>
+
+       
+        <section class="row clearfix">
+            <div class="col60 float">
+                <img class="dim-img" src="img/item3.svg" alt="">
+            </div>
+            <div class="col40 float">
+                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
+                    parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
+   </main>
     <!-- /main -->
 
     <!-- footer -->
