add 4th section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
                     parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
+
+        <div class="gray">
+            <section class="row">
+                <div>
+                    <h2 class="font-size">Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div>
+                <div>
+                    <img src="img/item4-big.svg" alt="" class="dim-img">
+                </div>
+                <div></div>
+            </section>
+        </div>
+
    </main>
     <!-- /main -->
 
