--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col40 float">
                     <h2 class="font-size">Dove trovarsi &eacute; facile</h2>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
-                        l&igrave;; e unirsi istantaneamente senza dover chiamare.</p>
+                    l&igrave;; e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div class="col60 float">
                     <img class="dim-img" src="img/item2.svg" alt="">
@@ -87,9 +87,8 @@
                 <img class="dim-img" src="img/item3.svg" alt="">
             </div>
             <div class="col40 float">
-                <h2 class="font-size">Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
-                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente
-                    parlare della tua giornata senza intasare una chat di gruppo.</p>
+                <h2 class="font-size">Da pochi ad un fandom</h2>
+                <p>Dai inizio ad una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro. </p>
             </div>
         </section>
 
