--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
 
         <div class="gray">
-            <section class="row vh">
+            <section class="row">
                 <div class="txt-center">
                     <h2 class="font-size">Tecnologia affidabile per tenersi in contatto</h2>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
@@ -101,7 +101,12 @@
                 <div>
                     <img src="img/item4-big.svg" alt="" class="dim-img">
                 </div>
-                <div></div>
+                <div class="star">
+                    <h3 class="text-star"> Pronto ad iniziare la tua avventura?<h3>
+                </div>
+                <div class="bottom-btn">
+                    <a tabindex="1" id="light" class="btn big dark" href=""><i class="fas fa-long-arrow-alt-down"></i> Scarica per Mac</a>
+                </div>
             </section>
         </div>
 
