--- a/index.html
+++ b/index.html
@@ -114,7 +114,26 @@
     <!-- /main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <div class="container-footer clearfix">
+            <div class="footer-col1 float">
+              <h4>Il tuo posto per parlare</h4>  
+              <img class="flag" src="img/ita.png" alt="">
+            </div>
+            <div class="footer-col2 float">
+                <h5>Prodotto</h5>
+            </div>
+            <div class="footer-col3 float">
+                <h5>Compagnia</h5>
+            </div>
+            <div class="footer-col4 float">
+                <h5>Risorse</h5>
+            </div>
+            <div class="footer-col5 float">
+                <h5>Norme</h5>
+            </div>
+        </div>
+    </footer>
     <!-- /footer -->
 </body>
 
