--- a/index.html
+++ b/index.html
@@ -118,10 +118,24 @@
         <div class="container-footer clearfix">
             <div class="footer-col1 float">
               <h4>Il tuo posto per parlare</h4>  
-              <img class="flag" src="img/ita.png" alt="">
+              <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-sort-down"></i></span>
+              <ul class="nav-menu">
+                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                  <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                  <li><a href=""></a><i class="fab fa-youtube"></i></li>
+                  
+              </ul>
             </div>
             <div class="footer-col2 float">
                 <h5>Prodotto</h5>
+                <ul>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perchc&eacute; Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
             </div>
             <div class="footer-col3 float">
                 <h5>Compagnia</h5>
