--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <img src="img/item4-big.svg" alt="" class="dim-img">
                 </div>
                 <div class="star">
-                    <h3 class="text-star"> Pronto ad iniziare la tua avventura?<h3>
+                    <h3 class="text-star"> Pronto ad iniziare la tua avventura?</h3>
                 </div>
                 <div class="bottom-btn">
                     <a tabindex="1" id="light" class="btn big dark" href=""><i class="fas fa-long-arrow-alt-down"></i> Scarica per Mac</a>
@@ -117,34 +117,62 @@
     <footer>
         <div class="container-footer clearfix">
             <div class="footer-col1 float">
-              <h4>Il tuo posto per parlare</h4>  
+              <h2 class="text-footer-social">Il tuo posto per parlare</h2>  
               <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-sort-down"></i></span>
-              <ul class="nav-menu">
+                <ul class="footer-menu nav-menu">
                   <li><a href=""><i class="fab fa-twitter"></i></a></li>
                   <li><a href=""><i class="fab fa-instagram"></i></a></li>
                   <li><a href=""><i class="fab fa-facebook"></i></a></li>
                   <li><a href=""></a><i class="fab fa-youtube"></i></li>
-                  
-              </ul>
+                </ul>
             </div>
             <div class="footer-col2 float">
-                <h5>Prodotto</h5>
-                <ul>
+                <h3 class="text-footer-link">Prodotto</h3>
+                <ul class="footer-menu">
                     <li><a href="">Scarica</a></li>
-                    <li><a href="">Perchc&eacute; Discord</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
                     <li><a href="">Nitro</a></li>
                     <li><a href="">Sicurezza</a></li>
                     <li><a href="">Assistenza</a></li>
                 </ul>
             </div>
             <div class="footer-col3 float">
-                <h5>Compagnia</h5>
+                <h3 class="text-footer-link">Compagnia</h3>
+                <ul class="footer-menu">
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
             </div>
             <div class="footer-col4 float">
-                <h5>Risorse</h5>
+                <h3 class="text-footer-link">Risorse</h3>
+                <ul class="footer-menu">
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
             </div>
             <div class="footer-col5 float">
-                <h5>Norme</h5>
+                <h3 class="text-footer-link">Norme</h3>
+                <ul class="footer-menu">
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="end">
+                <img class="logo" src="img/logo.svg" alt="">
+                <a href="#" class="btn">Registrati</a>
             </div>
         </div>
     </footer>
