--- a/index.html
+++ b/index.html
@@ -115,66 +115,72 @@
 
     <!-- footer -->
     <footer>
-        <div class="container-footer clearfix">
-            <div class="footer-col1 float">
-              <h2 class="text-footer-social">Il tuo posto per parlare</h2>  
-              <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-sort-down"></i></span>
-                <ul class="footer-menu nav-menu">
-                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                  <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                  <li><a href=""></a><i class="fab fa-youtube"></i></li>
-                </ul>
+       <section class="footer">
+            <div class="container-footer clearfix">
+                <div class="footer-col1 float">
+                    <h2 class="text-footer-social">Il tuo posto per parlare</h2>
+                    <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-sort-down"></i></span>
+                    <ul class="footer-menu nav-menu">
+                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                        <li><a href=""></a><i class="fab fa-youtube"></i></li>
+                    </ul>
+                </div>
+                <div class="footer-col2 float">
+                    <h3 class="text-footer-link">Prodotto</h3>
+                    <ul class="footer-menu">
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perch&eacute; Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col3 float">
+                    <h3 class="text-footer-link">Compagnia</h3>
+                    <ul class="footer-menu">
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perch&eacute; Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col4 float">
+                    <h3 class="text-footer-link">Risorse</h3>
+                    <ul class="footer-menu">
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perch&eacute; Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Perch&eacute; Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col5 float">
+                    <h3 class="text-footer-link">Norme</h3>
+                    <ul class="footer-menu">
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perch&eacute; Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-col2 float">
-                <h3 class="text-footer-link">Prodotto</h3>
-                <ul class="footer-menu">
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perch&eacute; Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-            </div>
-            <div class="footer-col3 float">
-                <h3 class="text-footer-link">Compagnia</h3>
-                <ul class="footer-menu">
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perch&eacute; Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-            </div>
-            <div class="footer-col4 float">
-                <h3 class="text-footer-link">Risorse</h3>
-                <ul class="footer-menu">
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perch&eacute; Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                    <li><a href="">Perch&eacute; Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-            </div>
-            <div class="footer-col5 float">
-                <h3 class="text-footer-link">Norme</h3>
-                <ul class="footer-menu">
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perch&eacute; Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-            </div>
-            <div class="end">
+       </section>
+       <section class="logo-bottom container-footer">
+           <div>
                 <img class="logo" src="img/logo.svg" alt="">
-                <a href="#" class="btn">Registrati</a>
             </div>
-        </div>
+            <div>
+                <a id="discord-bottom" href="#" class="btn">Accedi</a>
+            </div>
+       </section>
     </footer>
     <!-- /footer -->
 </body>
