fix font weight footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col40 float">
                     <h2 class="font-size">Dove trovarsi &eacute; facile</h2>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
-                    l&igrave;; e unirsi istantaneamente senza dover chiamare.</p>
+                    l&igrave; e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div class="col60 float">
                     <img class="dim-img" src="img/item2.svg" alt="">
@@ -124,7 +124,7 @@
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
                         <li><a href=""><i class="fab fa-instagram"></i></a></li>
                         <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                        <li><a href=""></a><i class="fab fa-youtube"></i></li>
+                        <li><a href=""><i class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
                 <div class="footer-col2 float">
