aggiunti commenti-sistemato margine social

--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
 
     <!-- footer -->
     <footer>
+        <!-- link social -->
        <section class="footer">
             <div class="container-footer clearfix">
                 <div class="footer-col1 float">
                     <h2 class="text-footer-social">Il tuo posto per parlare</h2>
-                    <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-sort-down"></i></span>
+                    <img class="flag" src="img/ita.png" alt=""> <span>Italiano <i class="fas fa-chevron-down"></i></span>
                     <ul class="footer-menu nav-menu">
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
                         <li><a href=""><i class="fab fa-instagram"></i></a></li>
@@ -127,7 +128,10 @@
                         <li><a href=""><i class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
-                <div class="footer-col2 float">
+        <!-- /link social -->
+        
+        <!-- link utili -->
+                 <div class="footer-col2 float">
                     <h3 class="text-footer-link">Prodotto</h3>
                     <ul class="footer-menu">
                         <li><a href="">Scarica</a></li>
@@ -173,6 +177,7 @@
                 </div>
             </div>
        </section>
+        <!-- /link utili -->
        <section class="logo-bottom container-footer">
            <div>
                 <img class="logo" src="img/logo.svg" alt="">
