--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
 
         <div class="gray">
-            <section class="row">
+            <section class="row text-align-cn">
                 <div class="txt-center">
                     <h2 class="font-size">Tecnologia affidabile per tenersi in contatto</h2>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
@@ -124,7 +124,7 @@
                     <ul class="footer-menu nav-menu">
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
                         <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
                         <li><a href=""><i class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
